<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="29dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/braveNewWorldLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin15dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin15dp"
            android:src="@drawable/brave_new_world" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/braveNewWorldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin15dp"
            app:layout_constraintStart_toEndOf="@+id/braveNewWorldLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/braveNewWorldText"
            android:textAppearance="@style/headText"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/braveNewWorldDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/braveNewWorldText"
            android:layout_marginTop="@dimen/margin10dp"
            app:layout_constraintStart_toEndOf="@+id/braveNewWorldLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/braveNewWorldDesc"
            android:textAppearance="@style/descText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/braveNewWorldDesc"
            app:layout_constraintStart_toEndOf="@id/braveNewWorldLogo"
            app:layout_constraintBottom_toBottomOf="@id/background"
            android:layout_marginBottom="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginTop="@dimen/margin12dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/braveNewWorldProcessText"
                android:textAppearance="@style/processText"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/star1"
                android:padding="@dimen/padding8dp"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/can"
                android:background="@drawable/shadow_view"
                android:padding="@dimen/padding8dp"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

        </LinearLayout>


<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/starIcon"-->
<!--            android:layout_width="28dp"-->
<!--            android:layout_height="28dp"-->
<!--            app:layout_constraintTop_toTopOf="@id/star"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/star"-->
<!--            app:layout_constraintStart_toStartOf="@id/star"-->
<!--            app:layout_constraintEnd_toEndOf="@id/star"-->
<!--            android:src="@drawable/star1"-->
<!--            />-->

<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:id="@+id/canIcon"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="@id/can"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/can"-->
<!--            app:layout_constraintStart_toStartOf="@id/can"-->
<!--            app:layout_constraintEnd_toEndOf="@id/can"-->
<!--            android:src="@drawable/can"-->
<!--            />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/background2"
            app:layout_constraintEnd_toEndOf="@id/background2"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="29dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

        </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/janeEyreLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin15dp"
        android:layout_marginStart="@dimen/margin24dp"
        android:layout_marginBottom="@dimen/margin15dp"
        android:src="@drawable/jane_eyre" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/janeEyreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin15dp"
            app:layout_constraintStart_toEndOf="@+id/janeEyreLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/janeEyreText"
            android:textAppearance="@style/headText"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/janeEyreDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/janeEyreText"
            android:layout_marginTop="@dimen/margin10dp"
            app:layout_constraintStart_toEndOf="@+id/janeEyreLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/janeEyreDesc"
            android:textAppearance="@style/descText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/janeEyreDesc"
            app:layout_constraintStart_toEndOf="@id/janeEyreLogo"
            app:layout_constraintBottom_toBottomOf="@id/background2"
            android:layout_marginBottom="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginTop="@dimen/margin12dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/janeEyreProcessText"
                android:textAppearance="@style/processText"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/star2"
                android:padding="@dimen/padding8dp"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/can"
                android:background="@drawable/shadow_view"
                android:padding="@dimen/padding8dp"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/background3"
            app:layout_constraintEnd_toEndOf="@id/background3"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="29dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size3dp"
                android:layout_height="@dimen/size3dp"
                android:src="@drawable/ellipse"
                android:layout_marginTop="@dimen/margin2dp"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/littleWomenLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/margin15dp"
            android:layout_marginStart="@dimen/margin24dp"
            android:layout_marginBottom="@dimen/margin15dp"
            android:src="@drawable/little_women" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/littleWomenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin15dp"
            app:layout_constraintStart_toEndOf="@+id/littleWomenLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/littleWomenText"
            android:textAppearance="@style/headText"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/littleWomenDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/littleWomenText"
            android:layout_marginTop="@dimen/margin10dp"
            app:layout_constraintStart_toEndOf="@+id/littleWomenLogo"
            android:layout_marginStart="@dimen/margin11dp"
            android:text="@string/littleWomenDesc"
            android:textAppearance="@style/descText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/littleWomenDesc"
            app:layout_constraintStart_toEndOf="@id/littleWomenLogo"
            app:layout_constraintBottom_toBottomOf="@id/background3"
            android:layout_marginBottom="@dimen/margin16dp"
            android:layout_marginStart="@dimen/margin16dp"
            android:layout_marginTop="@dimen/margin12dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/littleWomenProcessText"
                android:textAppearance="@style/processText"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/star2"
                android:padding="@dimen/padding8dp"
                android:background="@drawable/shadow_view"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/can"
                android:background="@drawable/shadow_view"
                android:padding="@dimen/padding8dp"
                android:layout_width="@dimen/size41dp"
                android:layout_height="@dimen/size41dp"
                android:layout_marginStart="@dimen/margin16dp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
        

</androidx.appcompat.widget.LinearLayoutCompat>